pkg/check/testdata/ub/types/valid/empty-config-without-binding.ub
imports: { aws: 'github.com/acme/aws' }
resources: { bucket: aws.bucket {} }
