pkg/check/testdata/ub/types/invalid/one-library-config-schema.ub
imports: {
  primary: 'github.com/acme/aws'
  backup: 'github.com/acme/aws'
}
inputs: {
  aws-config: { type: library-config('github.com/acme/aws') }
}
locals: { region: input.aws-config.region }
